--- a/configure.ac
+++ b/configure.ac
@@ -61,6 +61,8 @@ AC_PATH_PROGS([EMACSCLIENT], [emacsclient])
 AC_ARG_VAR([EMACSCLIENT], [the emacsclient command])
 AC_CHECK_PROGS([EXIFTOOL], [exiftool exiftool-5.22])
 AC_ARG_VAR([EXIFTOOL], [the exiftool command])
+AC_CHECK_PROGS([GREP], [ggrep grep])
+AC_ARG_VAR([GREP], [the grep command])
 AC_CHECK_PROGS([GZIP], [gzip])
 AC_ARG_VAR([GZIP], [the gzip command])
 AC_CHECK_PROGS([ICONV], [iconv])
