--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,8 @@ AC_ARG_VAR([KEYCHAIN], [the keychain command])
 AC_CHECK_PROGS([LAUNCHCTL], [launchctl], [:])
 AC_ARG_VAR([LAUNCHCTL], [the launchctl command])
 AC_PROG_MKDIR_P
+AC_CHECK_PROGS([MU], [mu], [:])
+AC_ARG_VAR([MU], [the mu command])
 AC_CHECK_PROGS([PATCH], [patch])
 AC_ARG_VAR([PATCH], [the patch command])
 AC_CHECK_PROGS([UNZIP], [unzip])
