Use our own package, docfold, instead of hideshow

--- a/Makefile.in
+++ b/Makefile.in
@@ -301,6 +301,7 @@ userconfemacsdinits_DATA = \
 sitelisp_elcs = \
 	emacs.d/site-lisp/autotest-mode.elc \
 	emacs.d/site-lisp/buff-menu-ext.elc \
+	emacs.d/site-lisp/docfold.elc \
 	emacs.d/site-lisp/evil-paredit.elc \
 	emacs.d/site-lisp/hide-mode-line.elc \
 	emacs.d/site-lisp/now-cc-mode.elc \
@@ -308,7 +309,6 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/now-evil.elc \
 	emacs.d/site-lisp/now-git.elc \
 	emacs.d/site-lisp/now-gxref.elc \
-	emacs.d/site-lisp/now-hideshow.elc \
 	emacs.d/site-lisp/now-init.elc \
 	emacs.d/site-lisp/now-org-agenda.elc \
 	emacs.d/site-lisp/now-org-clock.elc \
