--- a/Makefile.in
+++ b/Makefile.in
@@ -310,6 +310,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/now-git.elc \
 	emacs.d/site-lisp/now-gxref.elc \
 	emacs.d/site-lisp/now-init.elc \
+	emacs.d/site-lisp/now-ivy.elc \
 	emacs.d/site-lisp/now-org-agenda.elc \
 	emacs.d/site-lisp/now-org-clock.elc \
 	emacs.d/site-lisp/now-org-colview.elc \
