--- a/Makefile.in
+++ b/Makefile.in
@@ -304,6 +304,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/docfold.elc \
 	emacs.d/site-lisp/evil-paredit.elc \
 	emacs.d/site-lisp/hide-mode-line.elc \
+	emacs.d/site-lisp/nmc-mode.elc \
 	emacs.d/site-lisp/now-cc-mode.elc \
 	emacs.d/site-lisp/now-dired.elc \
 	emacs.d/site-lisp/now-evil.elc \
