Remove some stale blogs

--- a/rss2email.cfg
+++ b/rss2email.cfg
@@ -19,25 +19,16 @@ url = https://blades-blades-blades.blogspot.com/feeds/posts/default
 url = https://feeds.feedburner.com/ensaroud/GUPZ
 
 [feed.Ted-Unangst]
-url = http://www.tedunangst.com/flak/rss
-
-[feed.Emacs-Ninja]
-url = http://emacsninja.com/feed.atom
+url = https://flak.tedunangst.com/rss
 
 [feed.Padraig-Brady]
 url = http://www.pixelbeat.org/feed/rss2.xml
 
-[feed.The-Axis-of-Eval]
-url = https://axisofeval.blogspot.com/feeds/posts/default
-
-[feed.Ross-Cox]
+[feed.Russ-Cox]
 url = https://research.swtch.com/feeds/posts/default
 
 [feed.Plasmasturm]
 url = http://plasmasturm.org/feed
-
-[feed.Emacs-Horrors]
-url = http://emacshorrors.com/feed.atom
 
 [feed.Old-School-MTG]
 url = https://oldschool-mtg.blogspot.com/feeds/posts/default
