--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,8 @@ AC_CHECK_PROGS([PATCH], [patch])
 AC_ARG_VAR([PATCH], [the patch command])
 AC_CHECK_PROGS([UNZIP], [unzip])
 AC_ARG_VAR([UNZIP], [the unzip command])
+AC_CHECK_PROGS([XCLIP], [xclip])
+AC_ARG_VAR([XCLIP], [the xclip command])
 AC_PATH_PROGS([ZSHELL], [zsh])
 AC_ARG_VAR([ZSHELL], [the zsh command])
 prefix=${HOME}
