Add Calendar calendars

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.patch -whitespace
+*.ics crlf
 /mixxx/mixxx.cfg -whitespace
 /os/Cygwin/GHISLER/languages/wcmd_now.lng crlf
 /os/Cygwin/GHISLER/tcignore.txt crlf
