--- a/Makefile.in
+++ b/Makefile.in
@@ -288,6 +288,7 @@ userconfemacsd_DATA = \
 userconfemacsdetcschema_DATA = \
 	emacs.d/etc/schema/catalog.rnc \
 	emacs.d/etc/schema/gtk-builder.rnc \
+	emacs.d/etc/schema/logback.rnc \
 	emacs.d/etc/schema/maven-4.0.0.rnc \
 	emacs.d/etc/schema/mixxx-midi-controller-preset.rnc \
 	emacs.d/etc/schema/mixxx-skin.rnc \
