--- a/Makefile.in
+++ b/Makefile.in
@@ -311,6 +311,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/docfold.elc \
 	emacs.d/site-lisp/evil-paredit.elc \
 	emacs.d/site-lisp/hide-mode-line.elc \
+	emacs.d/site-lisp/highlight-selected-window.elc \
 	emacs.d/site-lisp/nmc-mode.elc \
 	emacs.d/site-lisp/now-cc-mode.elc \
 	emacs.d/site-lisp/now-dired.elc \
