Move ‘now-compilation-maven-highlight’ to now-compile.el

--- a/Makefile.in
+++ b/Makefile.in
@@ -317,6 +317,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/highlight-selected-window.elc \
 	emacs.d/site-lisp/nmc-mode.elc \
 	emacs.d/site-lisp/now-cc-mode.elc \
+	emacs.d/site-lisp/now-compile.elc \
 	emacs.d/site-lisp/now-dired.elc \
 	emacs.d/site-lisp/now-evil.elc \
 	emacs.d/site-lisp/now-git.elc \
