--- a/Makefile.in
+++ b/Makefile.in
@@ -320,6 +320,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/now-compile.elc \
 	emacs.d/site-lisp/now-counsel-evil.elc \
 	emacs.d/site-lisp/now-dired.elc \
+	emacs.d/site-lisp/now-elisp-mode.elc \
 	emacs.d/site-lisp/now-evil.elc \
 	emacs.d/site-lisp/now-git.elc \
 	emacs.d/site-lisp/now-gxref.elc \
