--- a/emacs.d/etc/schema/schemas.xml.in
+++ b/emacs.d/etc/schema/schemas.xml.in
@@ -3,6 +3,8 @@
   <namespace ns="urn:oasis:names:tc:entity:xmlns:xml:catalog"
              typeId="Entity Resolution XML Catalog"/>
   <namespace ns="http://maven.apache.org/POM/4.0.0" typeId="Project Object Model"/>
+  <namespace ns="http://maven.apache.org/SETTINGS/1.0.0"
+             typeId="Maven Settings"/>
 
   <documentElement localName="configuration" typeId="Logback Configuration"/>
   <documentElement localName="environment" typeId="Environment"/>
@@ -20,6 +22,7 @@
   <typeId id="Environment" uri="environment.rnc"/>
   <typeId id="GtkBuilder" uri="gtk-builder.rnc"/>
   <typeId id="PropertyList-1.0" uri="PropertyList-1.0.rnc"/>
+  <typeId id="Maven Settings" uri="maven-settings-1.0.0.rnc"/>
   <typeId id="Mixxx MIDI Controller Preset"
           uri="mixxx-midi-controller-preset.rnc"/>
   <typeId id="Mixxx Skin" uri="mixxx-skin.rnc"/>
