--- a/Makefile.in
+++ b/Makefile.in
@@ -337,6 +337,7 @@ sitelisp_elcs = \
 	emacs.d/site-lisp/now-compile.elc \
 	emacs.d/site-lisp/now-counsel-evil.elc \
 	emacs.d/site-lisp/now-dired.elc \
+	emacs.d/site-lisp/now-eglot.elc \
 	emacs.d/site-lisp/now-elisp-mode.elc \
 	emacs.d/site-lisp/now-evil.elc \
 	emacs.d/site-lisp/now-git.elc \
