--- a/zsh/zshrc.in
+++ b/zsh/zshrc.in
@@ -21,7 +21,7 @@ TIMEFMT=%J$'\n''real: %*E, user: %*U, system: %*S (%P)'
 
 zmodload -i zsh/complist
 
-autoload -U compinit; compinit
+autoload -U compinit; compinit -d ${XDG_CONFIG_CACHE:-~/.cache}/zsh/completion-dump
 
 zstyle ':completion:*' ignore-parents parent pwd
 zstyle ':completion:*' matcher-list 'm:{[:lower:]}={[:upper:]}' 'r:|[:.,_-]=** r:|=**'
@@ -31,6 +31,7 @@ zstyle ':completion:*:descriptions' format '%K{white}%d%k'
 zstyle ':completion:*:messages' format '%F{green}%d%f'
 zstyle ':completion:*:warnings' format '%F{red}no matches for %d%f'
 zstyle ':completion:*:options' auto-description 'specify %d'
+zstyle ':completion::complete:*' cache-path ${XDG_CONFIG_CACHE:-~/.cache}/zsh/completion
 zstyle ':completion::complete:*' use-cache yes
 
 zstyle ':completion:*:processes' command 'ps -U $EUID 2>/dev/null'
